# PL_538_Assignments

hw1/Duodoku/: .ghc.environment.x86_64-linux-8.6.5  hw1.cabal
hw1/Duodoku/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw1/Duodoku/dist-newstyle/packagedb/ghc-8.6.5/: hw1-0.1.0.0-inplace.conf  package.cache
hw1/Duodoku/src/: Duodoku.hs
hw2/: .ghc.environment.x86_64-linux-8.6.5  hw2.cabal
hw2/Context/dist-newstyle/cache/: compiler  config  elaborated-plan  solver-plan  source-hashes  up-to-date
hw2/Context/src/: AppendList.hs  ListContext.hs  TreeContext.hs
hw2/dist-newstyle/cache/: config  improved-plan  plan.json  up-to-date
hw2/dist-newstyle/packagedb/ghc-8.6.5/: hw2-0.1.0.0-inplace.conf  package.cache
hw2/src/: AppendList.hs  TreeContext.hs
hw3/Parser/: .ghc.environment.x86_64-linux-8.6.5  README.md  hw3.cabal
hw3/Parser/app/: Main.hs
hw3/Parser/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hw3/Parser/dist-newstyle/packagedb/ghc-8.6.5/: hw3-0.1.0.0-inplace.conf  package.cache
hw3/Parser/src/Ruse/: Eval.hs  Parser.hs  Syntax.hs  Tests.hs
hw4/Calculator/src/: exercise1.rs  exercise4.rs  parser.rs  rpn.rs
hw4/src/: exercise1.rs  parser.rs  rpn.rs
hw5/Binary Search Trees/src/: lib.rs
hw6/RSS indexer/src/: multi.rs  pooled.rs  threadpool.rs
