name:                hw2
version:             0.1.0.0
author:              CS 538 Student
maintainer:          netid@wisc.edu
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     AppendList, ListContext, TreeContext
  build-depends:       base >=4.9
  hs-source-dirs:      src
  default-language:    Haskell2010

executable appendlist
  main-is:             AppendListMain.hs
  hs-source-dirs:      app
  build-depends:       hw2, base >=4.9
  ghc-options:         -fwarn-incomplete-patterns -fwarn-tabs -fno-warn-type-defaults -Wall -Werror
  default-language:    Haskell2010

executable listcontext
  main-is:             ListContextMain.hs
  hs-source-dirs:      app
  build-depends:       hw2, base >=4.9
  ghc-options:         -fwarn-incomplete-patterns -fwarn-tabs -fno-warn-type-defaults -Wall -Werror
  default-language:    Haskell2010

executable treecontext
  main-is:             TreeContextMain.hs
  hs-source-dirs:      app
  build-depends:       hw2, base >=4.9
  ghc-options:         -fwarn-incomplete-patterns -fwarn-tabs -fno-warn-type-defaults -Wall -Werror
  default-language:    Haskell2010

  
