name:                hw1
version:             0.1.0.0
-- synopsis:
-- description:
author:              CS 538 Student
maintainer:          netid@wisc.edu
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Duodoku
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hw1
  main-is:             Main.hs
  hs-source-dirs:      app
  -- other-modules:
  -- other-extensions:
  build-depends:       hw1, base >=4.10 && <4.13
  ghc-options:         -fwarn-incomplete-patterns -fwarn-tabs -fno-warn-type-defaults
  -- hs-source-dirs:
  default-language:    Haskell2010
